# pixi-hello-c

./: .gitignore  README.md  pixi.toml  pyproject.toml
hellopkg/: hello.py
src/: Makefile  hello  hello.c
