[build-system]
# Use setuptools as the build backend
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hellopkg"
version = "0.1.0"
description = "A package that wraps a C binary for OpenMDAO"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
# Core dependencies for the OpenMDAO component
dependencies = [
    "openmdao>=3.26.0",
    "numpy",
]

[tool.setuptools]
# Tells setuptools where to find your python source
packages = ["hellopkg"]

