[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-pkg"
version = "0.1.0"
description = "A package that wraps a C binary for OpenMDAO"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "openmdao>=3.26.0",
    "numpy",
]

[tool.setuptools]
packages = ["hello-pkg"]

